# rust-mustache

./: Cargo.toml
.github/workflows/: ci.yml
examples/: simple.rs  vector_iteration.rs  with_file.rs
src/: builder.rs  compiler.rs  context.rs  data.rs  encoder.rs  error.rs  lib.rs  parser.rs  template.rs
tests/: builder.rs  macros.rs  template.rs  test.rs
