[package]
name = "mustache"
description = "Rust implementation of Mustache"
repository = "https://github.com/Normation/rust-mustache"
documentation = "http://nickel-org.github.io/rust-mustache"
version = "0.9.0"
authors = ["erick.tryzelaar@gmail.com"]
license = "MIT/Apache-2.0"
rust-version = "1.85.0"
edition = "2024"
autotests = false

[features]
unstable = []

[dependencies]
log = "0.3.5"
serde = "1.0.0"
serde_json = "1.0.0"

[dev-dependencies]
serde_derive = "1.0.0"
tempdir = "0.3.4"

[[test]]
name = "test"
path = "tests/test.rs"
